ignored various earth-surface maps, minor changes to Maze files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
+**/*.pdf
+**/~*
+Basin-snapshot.jpg
 .idea/*
+hurricane/images/earthmap1k.jpg
+hurricane/images/earthspec1k.jpg
+hurricane/images/moonbump1k.jpg
+hurricane/images/moonbump2k.jpg
+hurricane/images/moonbump4k.jpg
+hurricane/images/moonmap1k.jpg
+hurricane/images/moonmap2k.jpg
+hurricane/images/moonmap4k.jpg
+hurricane/images/8081-earthbump10k.jpg
+hurricane/images/8081-earthbump2k.jpg
+hurricane/images/8081-earthbump4k.jpg
+hurricane/images/8081-earthhiresclouds4K.jp2
+hurricane/images/8081-earthlights10k.jpg
+hurricane/images/8081-earthlights2k.jpg
+hurricane/images/8081-earthlights4k.jpg
+hurricane/images/8081-earthmap10k.jpg
+hurricane/images/8081-earthmap2k.jpg
+hurricane/images/8081-earthmap4k.jpg
+hurricane/images/8081-earthspec10k.jpg
+hurricane/images/8081-earthspec2k.jpg
+hurricane/images/8081-earthspec4k.jpg
+hurricane/images/earthbump1k.jpg
+hurricane/images/earthcloudmap.jpg
+hurricane/images/earthcloudmaptrans.jpg
+hurricane/images/earthlights1k.jpg
